# checkle

./: .gitignore  Cargo.toml  README.md  go.mod  justfile
src/: hashing.rs  lib.rs  main.rs
