[package]
name = "checkle"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Extremely fast checksum runner for arbitrarily large batches of files"
repository = "https://github.com/nrminor/checkle"
homepage = "https://github.com/nrminor/checkle"
documentation = "https://github.com/nrminor/checkle/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "checkle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "cargo"]}
clap-verbosity-flag = "2.1.1"
ctrlc = "3.4.2"
derive-new = "0.6.0"
displaydoc = "0.2.4"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.28"
sha2 = "0.10.8"
base64ct = "1.6.0"
color-eyre = "0.6.3"
rayon = "1.10.0"
digest = "0.10.7"
md-5 = "0.10.6"

[profile.release]
lto = true
